--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,17 @@ a {
 
 #poll {
   max-width: 600px;
+  padding: 4px;
+  display: inline-block;
+}
+#poll.preview {
+  border: 1px dashed #666;
+}
+
+label.summary {
+  display: flex;
+  padding: 2px;
+  justify-content: space-between;
 }
 
 #metaTable {
@@ -38,6 +49,17 @@ a {
   flex-wrap: wrap;
   gap: 4px;
   align-items: flex-start;
+}
+
+.radiogroup {
+  border: none;
+  padding: 0;
+  display: block;
+}
+.radiogroup label {
+  width: 100%;
+  display: block;
+  margin-bottom: 2px;
 }
 
 .drag-handle {
@@ -135,5 +157,7 @@ a {
   padding: 2px;
 }
 .colorSquare {
-width:50px; height:50px; cursor:pointer;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
 }
